Size chart labels and legends for the text they are drawn in
The site stylesheet gives every chart label 16 pixels, which overrides the font-size
attributes the SVG carries, so the legend rows, legend columns and label offsets that
were measured for a much smaller font overlapped each other.

- Chart text size is one constant the layout follows: label offsets, legend swatch,
  row height and the width a legend entry needs are all derived from it.
- A side legend is as wide as its longest name instead of a fixed width, and no legend
  draws a row past the space reserved for it.
- A pie label is placed by its text box rather than by its anchor, so a slice pointing
  sideways keeps its label inside the plot.
- Value labels and tooltips use the in-game value and percent formatters, including the
  guard that keeps a broken value from printing as NaN%.
- A label colour is resolved once per chart instead of once per drawn point.
- The chart entry points that still take a legend flag follow the in-game default of a
  legend at the top, like the pages do.
- The pie chart's insert template writes the attribute a slice actually reads, an
  ignored child of <BlockStats> is reported whatever form it takes, and the overlay size
  documentation states the rule the code implements.